# Vigil-ForgeMesh-

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  Cargo.toml  Dockerfile  EXTENSIONS.md  INTEGRATION_SUMMARY.md  Justfile  LICENSE  QUICKSTART.md  README.md  VIGIL_IMPLEMENTATION_GUIDE.md  WHAT_WAS_BUILT.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/lib/: api.ts
apps/web/src/pages/: Dashboard.tsx  Landing.tsx
crates/forgemesh-cli/: Cargo.toml
crates/forgemesh-cli/src/: bulk_ops.rs  main.rs
crates/forgemesh-core/: Cargo.toml
crates/forgemesh-core/src/: analytics.rs  lib.rs  merkle.rs  simulation.rs  store.rs  types.rs
crates/forgemesh-p2p/: Cargo.toml
crates/forgemesh-p2p/src/: crdt.rs  gossip.rs  lib.rs
crates/forgemesh-sync/: Cargo.toml
crates/forgemesh-sync/src/: car.rs  delta.rs  lib.rs
crates/forgemesh-web/: Cargo.toml
crates/forgemesh-web/src/: api.rs  lib.rs
crates/vigil-cli/: Cargo.toml
crates/vigil-cli/src/: bulk_ops.rs  main.rs
crates/vigil-core/: Cargo.toml
crates/vigil-core/src/: actions.rs  analytics.rs  audit.rs  auth.rs  copilot.rs  db.rs  export.rs  incidents.rs  lib.rs  merkle.rs  models.rs  rules.rs  simulation.rs  store.rs  types.rs
crates/vigil-core/tests/: test_actions.rs  test_copilot.rs  test_incidents.rs  test_replay.rs  test_rules.rs
crates/vigil-p2p/: Cargo.toml
crates/vigil-p2p/src/: crdt.rs  gossip.rs  lib.rs
crates/vigil-sync/: Cargo.toml
crates/vigil-sync/src/: car.rs  delta.rs  lib.rs
crates/vigil-web/: Cargo.toml
crates/vigil-web/src/: api.rs  dashboard.html  incident_pdf.rs  lib.rs
crates/vigil-web/static/: dashboard.html  index.html
crates/vigil-web/static/assets/: index-Cqxcm8MX.css  index-PtlL7jRE.js
data/: sample_machine_logs.jsonl  sample_maintenance_tickets.csv  sample_operator_notes.jsonl
demo/: demo_scenario.md  demo_script.md  demo_video_link.txt
demo/screenshots/: README.md  capture-all.mjs  capture-landing.mjs  capture-new.mjs  capture.mjs  package-lock.json  package.json
docs/: vigil-agent.md
migrations/: 001_incident_intelligence.sql  002_incident_ordering.sql  002_product_features.sql
scripts/: run_demo_flow.sh  seed_demo_data.sh
