[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha3 = "0.10"
hex = "0.4"
sled = "0.34"
bincode = "1.3"
chrono = "0.4"
tracing = "0.1"
rand = "0.8"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
byteorder = "1.5"
tempfile = "3.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
crdts = "7.3"
iroh = "0.28"
iroh-gossip = "0.28"
futures = "0.3"
bytes = "1.5"
bcrypt = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
