[package]
name = "forgemesh-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }  # NEW: For simulation

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }
