[package]
name = "vigil-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }  # NEW: For simulation

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
