[package]
name = "vigil-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
vigil-core = { path = "../vigil-core" }
vigil-sync = { path = "../vigil-sync" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
crdts = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
