[package]
name = "vigil-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
vigil-core = { path = "../vigil-core" }
serde = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
