[package]
name = "vigil-web"
version = "0.2.0"
edition = "2021"

[dependencies]
vigil-core = { path = "../vigil-core" }
vigil-p2p = { path = "../vigil-p2p" }
vigil-sync = { path = "../vigil-sync" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
printpdf = "0.3"
